// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comma-separated selectors 1`] = `
"#my-scope .some-class div,
#my-scope .some-class h1 {
  background-color: rebeccapurple;
}
#my-scope .some-class div span,
#my-scope .some-class h1 span {
  font-size: 14px;
}
"
`;

exports[`complex-ish extra scope 1`] = `
"#my-scope .other-class div .some-class {
  background-color: rebeccapurple;
}
"
`;

exports[`empty stylis scope 1`] = `
"#my-scope div {
  background-color: rebeccapurple;
}
"
`;

exports[`handles @at-rules correctly 1`] = `
"#my-scope .some-class div,
#my-scope .some-class h1 {
  background-color: rebeccapurple;
}
#my-scope .some-class div span,
#my-scope .some-class h1 span {
  font-size: 14px;
}
@media {
  #my-scope .some-class .other-class {
    margin: 20px;
  }
}
@-webkit-keyframe -some-class {
  0%: {
    color: red;
  }
}
@keyframe -some-class {
  0%: {
    color: red;
  }
}
"
`;

exports[`handles @at-rules correctly 2`] = `
"#my-scope .some-class div {
  background-color: rebeccapurple;
}
@media {
  #my-scope .some-class .other-class {
    margin: 20px;
  }
}
@-webkit-keyframe -some-class {
  0%: {
    color: red;
  }
}
@keyframe -some-class {
  0%: {
    color: red;
  }
}
"
`;

exports[`nested input 1`] = `
"#my-scope .some-class div {
  background-color: rebeccapurple;
}
#my-scope .some-class div span {
  font-size: 14px;
}
#my-scope .some-class .other-class {
  margin: 20px;
}
"
`;

exports[`simple input 1`] = `
"#my-scope .some-class {
  background-color: rebeccapurple;
}
"
`;

exports[`trims padded extra scope 1`] = `
"#my-scope .some-class {
  background-color: rebeccapurple;
}
"
`;
